--- a/index.html
+++ b/index.html
@@ -43,20 +43,22 @@
 
     <section>
       <h2>&lt;usbe-select&gt;</h2>
-      <usbe-select>
-        <option value="">-- Please choose a grade --</option>
+      <!-- If native <option> doesn't work, this section must be changed depending on component implementation -->
+      <label for="gradeSelect">Grade Level:</label>
+      <select id="gradeSelect">
+        <option value="">-- Select Grade --</option>
         <option value="k">Kindergarten</option>
         <option value="1">Grade 1</option>
         <option value="2">Grade 2</option>
         <option value="3">Grade 3</option>
-      </usbe-select>
+      </select>
     </section>
 
     <section>
       <h2>&lt;usbe-dialog&gt;</h2>
-      <usbe-dialog>
-        <h3 slot="title">Confirm Deletion</h3>
-        <p slot="body">Are you sure you want to delete this record? This action cannot be undone.</p>
+      <usbe-dialog id="myDialog">
+        <h3 slot="title">Delete Record</h3>
+        <p slot="body">Are you sure you want to delete this? It cannot be undone.</p>
       </usbe-dialog>
     </section>
   </body>
